<resources>
    <string name="app_name">YRC</string>
    <string name="app_description">Youth Red Cross</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
</resources>